# gpsp-menu

./: CMakeLists.txt  ControllerMapper.qml  ControllerSelector.qml  ControllerTest.qml  FileItem.cpp  FileItem.h  FileModel.cpp  FileModel.h  README.md  RomManager.cpp  RomManager.h  SdlGameController.cpp  SdlGameController.h  SelectBeforeRun.qml  Settings.cpp  Settings.h  Settings.qml  gpsp-menu.desktop.template  gpsp-menu.pro  gpsp.service.in  main.cpp  main.qml  resources.qrc
i18n/: gpsp-menu.ast.ts  gpsp-menu.ca.ts  gpsp-menu.ckb.ts  gpsp-menu.cs.ts  gpsp-menu.da.ts  gpsp-menu.de_DE.ts  gpsp-menu.desktop.h  gpsp-menu.el.ts  gpsp-menu.en_GB.ts  gpsp-menu.es.ts  gpsp-menu.es_AR.ts  gpsp-menu.fa.ts  gpsp-menu.fi.ts  gpsp-menu.fr.ts  gpsp-menu.gl.ts  gpsp-menu.he.ts  gpsp-menu.hr.ts  gpsp-menu.hu.ts  gpsp-menu.id.ts  gpsp-menu.it.ts  gpsp-menu.ja.ts  gpsp-menu.ka.ts  gpsp-menu.kab.ts  gpsp-menu.ko.ts  gpsp-menu.lb.ts  gpsp-menu.lt.ts  gpsp-menu.mr.ts  gpsp-menu.ms.ts  gpsp-menu.nb_NO.ts  gpsp-menu.nl_BE.ts  gpsp-menu.nl_NL.ts  gpsp-menu.pl.ts  gpsp-menu.pt.ts  gpsp-menu.pt_BR.ts  gpsp-menu.pt_PT.ts  gpsp-menu.ro.ts  gpsp-menu.ru.ts  gpsp-menu.sk.ts  gpsp-menu.sv.ts  gpsp-menu.ta.ts  (+9 more)
src/: CMakeLists.txt  FileModel.h  RomManager.cpp  RomManager.h  SdlGameController.cpp  SdlGameController.h  Settings.cpp  Settings.h  main.cpp  resources.qrc
src/qml/: ControllerMapper.qml  ControllerSelector.qml  SelectBeforeRun.qml  Settings.qml  main.qml
